// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Social Media Graphics : Race : Footnotes : Generic combined renders correctly 1`] = `
<div
  className="notes"
>
  <div>
    <strong>
      Notes:
    </strong>
     
    Alabama
     has reported race and ethnicity data for 
    98
    %
     of cases and
     
    43
    %
     of deaths. Graphic only includes demographic groups reported by the state. Race categories are mutually exclusive and defined as not Hispanic or Latino.
  </div>
</div>
`;

exports[`Components : Social Media Graphics : Race : Footnotes : Generic separate renders correctly 1`] = `
<div
  className="notes"
>
  <div>
    <strong>
      Notes:
    </strong>
     
    Alabama
     has reported race data for
     
    32
    %
     of cases and
     
    76
    %
     of deaths, and ethnicity data for 
    99
    %
     of cases and
     
    100
    %
     of deaths. Graphic only includes demographic groups reported by the state. Race categories are mutually exclusive and include both Hispanic/Latino and non-Hispanic/Latino ethnicity.
  </div>
</div>
`;

exports[`Components : Social Media Graphics : Race : Footnotes : National renders correctly 1`] = `
<div
  className="notes national"
>
  <div>
    <strong>
      Notes:
    </strong>
     Nationwide,
     
    49
     of 56 states and territories report race/ethnicity information for cases and
     
    34
     of 56 report race/ethnicity for deaths. Graphic includes demographic data from all states and territories that report, using standard Census categories where possible, and scaled to the total US population for each Census category. Race categories may overlap with Hispanic/Latino ethnicity. Some rates are underestimated due to lack of reporting of race and ethnicity categories for COVID-19 cases and deaths.
  </div>
</div>
`;

exports[`Components : Social Media Graphics : Race : Footnotes : Utah renders correctly 1`] = `
<div
  className="notes"
>
  <div>
    <strong>
      Notes:
    </strong>
     Utah has reported race and ethnicity data for
     
    98
    %
     of cases and
     
    43
    %
     of deaths. Graphic only includes demographic groups reported by the state. Race categories are non-mutually-exclusive and are defined as not Hispanic or Latino.
  </div>
  <div
    className="asteriskFootnote"
  >
    * Based on less than 10 deaths among members of this race/ethnicity. Interpret with caution.
    <br />
    †
     
    Here is an additional footnote
  </div>
</div>
`;

exports[`Components : Social Media Graphics : Race : Footnotes : Wyoming renders correctly 1`] = `
<div
  className="notes"
>
  <div>
    <strong>
      Notes:
    </strong>
     Wyoming has reported race data for
     
    32
    %
     of cases and
     
    76
    %
     of deaths, and ethnicity data for 
    99
    %
     of cases and
     
    100
    %
     of deaths. Graphic only includes demographic groups reported by the state. Race categories are non-mutually-exclusive and include both Hispanic/Latino and non-Hispanic/Latino ethnicity.
  </div>
</div>
`;
